kubernetes/poc/headerecho.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headerecho-v1
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headerecho
      version: v1
  template:
    metadata:
      labels:
        app: headerecho
        version: v1
    spec:
      containers:
      - name: name
        image: rjshrjndrn/headerecho:v1
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 4000
