kubernetes/poc/headerecho.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headerecho
  namespace: dev
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: headerecho
