kubernetes/poc/nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: proxy-config
          configMap:
            name: default.conf
      containers:
      - name: name
        image: nginx
        volumeMounts:
          - name: proxy-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
