kubernetes/poc/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: headerecho
spec:
  hosts:
  - headerechos
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: headerecho
        subset: v2
  - route:
    - destination:
        host: headerecho
        subset: v1
